# earthnet-mobile

./: .gitattributes  .metadata  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/cl/earthnet/earthnet_mobile/: AlertForegroundService.kt  MainActivity.kt
integration_test/: simple_test.dart
lib/: main.dart
lib/src/: alarm.dart  backoff.dart  countdown.dart  foreground_service.dart  geo.dart  geocode.dart  identity.dart  intensity.dart  location.dart  observation_sender.dart  pulse_indicator.dart  relay_connection.dart  sensor.dart  verify.dart
lib/src/proto/: earthnet.pb.dart  earthnet.pbenum.dart  earthnet.pbjson.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: detect.dart
proto/: earthnet.proto
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: detect.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_earthnet_mobile.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_earthnet_mobile.podspec
rust_builder/windows/: CMakeLists.txt
test/: backoff_test.dart  conformance_test.dart  countdown_test.dart  intensity_test.dart  sensor_sign_test.dart  widget_test.dart
test/vectors/: v0_1.json
