[package]
name = "rust_lib_earthnet_mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
# Reuse the shared Rust detection core (STA/LTA) — same code the node runs.
earthnet-protocol = { git = "https://github.com/devjamez/earthnet-protocol" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
